--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.logo-img {
+  width: 150px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +37,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.header {
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.09);
+}
+
+.option-container {
+  list-style-type: none;
+  margin-bottom: 0 !important;
 }
