--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
   text-align: center;
 }
 
@@ -6,9 +6,7 @@
   height: 40vmin;
   pointer-events: none;
 }
-.logo-img {
-  width: 150px;
-}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -37,13 +35,58 @@
   to {
     transform: rotate(360deg);
   }
+}*/
+
+.logo-img {
+  width: 150px;
 }
 
-.header {
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.09);
+.txt-bold {
+  font-weight: bold;
 }
 
-.option-container {
+.nav-links {
+  color: #27A87E;
+  text-decoration: none;
+}
+
+.mgb-50 {
+  margin-bottom: 75px;
+}
+
+.borderRad-20 {
+  border-radius: 20px;
+}
+
+.btnClr {
+  background-color: white;
+  color: #27A87E;
+}
+
+.ulStylenone {
   list-style-type: none;
-  margin-bottom: 0 !important;
+}
+
+.paddingL0 {
+  padding-left: 0px;
+}
+
+.modi5btn {
+  background: #81E4C4;
+  border-radius: 50px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-weight: 600;
+  font-size: 24px;
+  text-decoration: none;
+  line-height: 22px;
+}
+/* import search from '../../Assets/Images/search.svg'; */
+input#search {
+  background-image: url(../src/Assets/Images/search.svg);
+  background-repeat: no-repeat;
+  text-indent: 20px;
 }
