--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,13 @@ input#search {
   background-repeat: no-repeat;
   text-indent: 20px;
 }
+
+.hov:hover {
+  /* font-weight: bold; */
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: #81E4C4;
+  box-shadow: 0px 2px 1px #81E4C4;
+  cursor: pointer;
+}
