--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -5,12 +5,12 @@
 
 .option-container li {
   display: inline;
-  margin-left: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 20px;
+  margin-left: 0.625rem;
+  padding-top: 0.313rem;
+  padding-bottom: 0.313rem;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+  border-radius: 1.25rem;
 }
 
 .nav-links {
@@ -19,7 +19,7 @@
 }
 
 .header {
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.09);
+    box-shadow: 0rem 0.188rem 0.5rem rgba(0, 0, 0, 0.09);
 }
 
 .ulStylenone {
@@ -27,5 +27,5 @@
 }
 
 .mt50 {
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
